--- a/Aula13_MyFinance/web/WEB-INF/jspf/header.jspf
+++ b/Aula13_MyFinance/web/WEB-INF/jspf/header.jspf
@@ -1,4 +1,5 @@
 <%@page import="web.DbListener"%>
+<%@page import="model.Usuario"%>
 <%@ page pageEncoding="UTF-8" %>
 <%if(DbListener.exceptionMessage != null){%>
 <div style="background-color: red; color: white">
@@ -6,4 +7,46 @@
 </div>
 <%}%>
 
+<%
+    String requestErrorMessage = null;
+    if(request.getParameter("loginForm")!=null){
+        String login = request.getParameter("login");
+        String password = request.getParameter("password");
+        try{
+            Usuario u = Usuario.getUser(login, password);
+            if(u==null){
+                requestErrorMessage = "Login e/ou senha inválido(s)";
+            }else{
+                session.setAttribute("session.login", u.getLogin());
+                session.setAttribute("session.nome", u.getNome());
+                session.setAttribute("session.papel", u.getPapel());
+                response.sendRedirect(request.getRequestURI());
+            }
+        }catch(Exception ex){
+            requestErrorMessage = ex.getLocalizedMessage();
+        }
+    }
+    if(request.getParameter("logoutForm")!=null){
+        session.removeAttribute("session.login");
+        session.removeAttribute("session.nome");
+        session.removeAttribute("session.papel");
+        response.sendRedirect(request.getRequestURI());
+    }
+%>
+<a href="<%=request.getContextPath()%>/index.jsp"><h1>FINANCY$</h1></a>
+<%if(requestErrorMessage!=null){%>
+    <div style="color: red"><%= requestErrorMessage %></div>
+<%}%>
+<%if(session.getAttribute("session.login")==null){%>
+    <form method="post">
+        Login: <input type="text" name="login"/>
+        Senha: <input type="password" name="password"/>
+        <input type="submit" name="loginForm" value="Entrar"/>
+    </form>
+<%}else{%>
+    <form method="post">
+        Logado como <b><%= session.getAttribute("session.nome") %></b>
+        <input type="submit" name="logoutForm" value="Sair"/>
+    </form>
+<%}%>
 <hr/>
